whoami/base/_whoami_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - image: paulbouwer/hello-kubernetes:1.5
          name: whoami
          ports:
            - containerPort: 8080
              protocol: TCP
